some data sources

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -19,3 +19,31 @@ Ethics policies: All research must have been conducted within an appropriate eth
 
 
  -->
+### Data sources
+
+#### Proto-research objects
+
+* myExperiment packs https://www.myexperiment.org/packs
+* COMBINE archives [@doi:10.1186/s12859-014-0369-z]
+* VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ [@doi:10.1186/s12859-014-0369-z; @doi:10.3233/SW-2012-0088]
+* DataONE Data packages [@10.1109/eScience.2018.00019]
+
+#### ORE-based research objects
+
+* RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
+* CWLProv [@10.1093/gigascience/giz095]
+* http://www.rohub.org/ [@10.1007/978-3-319-12024-9_9]
+* http://rohub.linkeddata.es/
+* SEEK: https://fairdomhub.org/investigations
+* BDBags with MinID http://minid.bd2k.org/ [@10.1371/journal.pone.0213013; ]
+* Zenodo e.g. [@doi:10.5281/zenodo.1465897]
+* Mendeley Data eg [@doi:10.17632/6wtpgr3kbj.1]
+* Maven https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/
+* DocumentObject https://github.com/binfalse/DocumentObjectCompiler/
+* GitHub 
+
+#### 2nd generation ROs
+
+* DataCrate: https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples
+* RO-Crate: https://data.research.uts.edu.au/examples/ro-crate/0.2/
+
