--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -30,6 +30,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 
 #### ORE-based research objects
 
+* CWL Viewer https://view.commonwl.org/workflows [@10.7490/f1000research.1114375.1]
 * RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
 * CWLProv [@10.1093/gigascience/giz095]
 * http://www.rohub.org/ [@10.1007/978-3-319-12024-9_9]
@@ -41,6 +42,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 * Maven https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/
 * DocumentObject https://github.com/binfalse/DocumentObjectCompiler/
 * GitHub 
+* EOSC-Life (too early?)
 
 #### 2nd generation ROs
 
