--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -23,8 +23,8 @@ Ethics policies: All research must have been conducted within an appropriate eth
 
 #### Proto-research objects
 
-* myExperiment packs https://www.myexperiment.org/packs
-* COMBINE archives [@doi:10.1186/s12859-014-0369-z]
+* [myExperiment packs](https://www.myexperiment.org/packs)
+* [COMBINE archives](https://combinearchive.org/index/) [@doi:10.1186/s12859-014-0369-z; @10.5281/zenodo.10439]
 * VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ [@doi:10.1186/s12859-014-0369-z; @doi:10.3233/SW-2012-0088]
 * DataONE Data packages [@10.1109/eScience.2018.00019]
 
@@ -32,6 +32,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 
 * CWL Viewer https://view.commonwl.org/workflows [@10.7490/f1000research.1114375.1]
 * RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
+* Workflow PROV corpus [@10.1145/2457317.2457376]
 * CWLProv [@10.1093/gigascience/giz095]
 * http://www.rohub.org/ [@10.1007/978-3-319-12024-9_9]
 * http://rohub.linkeddata.es/
