--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -24,20 +24,20 @@ Ethics policies: All research must have been conducted within an appropriate eth
 #### Proto-research objects
 
 * [myExperiment packs](https://www.myexperiment.org/packs)
-* [COMBINE archives](https://combinearchive.org/index/) [@doi:10.1186/s12859-014-0369-z; @10.5281/zenodo.10439]
+* [COMBINE archives](https://combinearchive.org/index/) [@doi:10.1186/s12859-014-0369-z; @doi:10.5281/zenodo.10439]
 * VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ [@doi:10.1186/s12859-014-0369-z; @doi:10.3233/SW-2012-0088]
-* DataONE Data packages [@10.1109/eScience.2018.00019]
+* DataONE Data packages [@doi:10.1109/eScience.2018.00019]
 
 #### ORE-based research objects
 
-* CWL Viewer https://view.commonwl.org/workflows [@10.7490/f1000research.1114375.1]
+* CWL Viewer https://view.commonwl.org/workflows [@doi:10.7490/f1000research.1114375.1]
 * RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
-* Workflow PROV corpus [@10.1145/2457317.2457376]
-* CWLProv [@10.1093/gigascience/giz095]
-* http://www.rohub.org/ [@10.1007/978-3-319-12024-9_9]
+* Workflow PROV corpus [@doi:10.1145/2457317.2457376]
+* CWLProv [@doi:10.1093/gigascience/giz095]
+* http://www.rohub.org/ [@doi:10.1007/978-3-319-12024-9_9]
 * http://rohub.linkeddata.es/
 * SEEK: https://fairdomhub.org/investigations
-* BDBags with MinID http://minid.bd2k.org/ [@10.1371/journal.pone.0213013; ]
+* BDBags with MinID http://minid.bd2k.org/ [@doi:10.1371/journal.pone.0213013; ]
 * Zenodo e.g. [@doi:10.5281/zenodo.1465897]
 * Mendeley Data eg [@doi:10.17632/6wtpgr3kbj.1]
 * Maven https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/
