--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -33,7 +33,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 * CWL Viewer https://view.commonwl.org/workflows [@doi:10.7490/f1000research.1114375.1]
 * RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
 * Workflow PROV corpus [@doi:10.1145/2457317.2457376]
-* CWLProv [@doi:10.1093/gigascience/giz095]
+* CWLProv 10.1093/gigascience/giz095 aka [@doi:10.5281/zenodo.1208477]
 * http://www.rohub.org/ [@doi:10.1007/978-3-319-12024-9_9]
 * http://rohub.linkeddata.es/
 * SEEK: https://fairdomhub.org/investigations
