more on the methods

--- a/content/85.authorcontributions.md
+++ b/content/85.authorcontributions.md
@@ -10,8 +10,8 @@ http://casrai.org/credit
 * Funding Acquisition: SSR, CAG
 * Investigation: 
 * Methodology: 
-* Project Administratoin:
-* Resources: 
+* Project Administration:
+* Resources: CAG, SSR
 * Software: SSR
 * Supervision: PG
 * Validation: 
