--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -142,27 +142,34 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 
 #### ORE-based research objects
 
-* CWL Viewer https://view.commonwl.org/workflows [@doi:10.7490/f1000research.1114375.1]
-* RO Bundle https://researchobject.github.io/specifications/bundle/ [@doi:10.5281/zenodo.12586] 
+* CWL Viewer <https://view.commonwl.org/workflows> [@doi:10.7490/f1000research.1114375.1]
+* RO Bundle <https://w3id.org/bundle/2014-11-05/> [@doi:10.5281/zenodo.12586] 
 * Workflow PROV corpus [@doi:10.1145/2457317.2457376]
 * CWLProv 10.1093/gigascience/giz095 aka [@doi:10.5281/zenodo.1208477]
-* http://www.rohub.org/ [@doi:10.1007/978-3-319-12024-9_9]
-* http://rohub.linkeddata.es/
-* SEEK: https://fairdomhub.org/investigations
-* BDBags with MinID http://minid.bd2k.org/ [@doi:10.1371/journal.pone.0213013; ]
+* <http://www.rohub.org/> [@doi:10.1007/978-3-319-12024-9_9]
+* <http://rohub.linkeddata.es/>
+* SEEK: <https://fairdomhub.org/investigations>
+* BDBags with [MinID](http://minid.bd2k.org/) [@doi:10.1371/journal.pone.0213013; ]
 * Zenodo e.g. [@doi:10.5281/zenodo.1465897]
 * Mendeley Data eg [@doi:10.17632/6wtpgr3kbj.1]
-* Maven https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/
-* DocumentObject https://github.com/binfalse/DocumentObjectCompiler/
-* GitHub 
+* Maven <https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/>
+* DocumentObject <https://github.com/binfalse/DocumentObjectCompiler/>
+* GitHub search
 * EOSC-Life (too early?)
+
+### Software/container-based research objects
+
+* <https://sci-f.github.io/> [@doi:10.1093/gigascience/giy023]
+* <https://frictionlessdata.io/specs/data-package/>
 
 #### 2nd generation ROs
 
-* DataCrate: https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples
-* RO-Crate: https://data.research.uts.edu.au/examples/ro-crate/0.2/
+* DataCrate: <https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples>
+* RO-Crate: <https://data.research.uts.edu.au/examples/ro-crate/0.2/>
+
 
 
 ### Manifest formats
 
-A key characteristic of a Research Object is the presence of a _manifest_ that describes and relates the content. However, multiple potential formats and conventions have emerged for how to serialize such a format.
+A key characteristic of a Research Object is the presence of a _manifest_ that describes and relates the content. However, multiple potential formats and conventions have emerged for how to serialize such a format. (..)
+
