split into post-processing workflow

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -185,7 +185,17 @@ The overall data gathering workflow is envisioned as:
 7. Re-download selected archives
 8. Extract manifest(s) from archives
 9. Classify manifests based on format and vocabulary (e.g. RDF/XML using ORE-OAI)
-10. Convert manifests to a unified format/vocabulary (e.g. JSON-LD using RO-Crate)
-11. Record provenance of data gathering
-12. Populate quad store (e.g. Apache Jena) with converted manifests
+10. Record provenance of data gathering
+
+Post-processing workflow:
+
+1. Convert manifests to a unified RDF format (e.g. N-Triples)
+2. Populate quad store (e.g. Apache Jena) with converted manifests
+3. 
+
+
+https://zenodo.org/communities/ro/?page=1&size=20
+
+
+
 
