avoid page breaks in pdf

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -1,4 +1,4 @@
-## Protocol {.page_break_before}
+## Protocol
 
 <!-- From https://f1000research.com/for-authors/article-guidelines/study-protocols
 
