--- a/content/80.data-availability.md
+++ b/content/80.data-availability.md
@@ -1,4 +1,4 @@
-## Data (and Software) Availability {.page_break_before}
+## Data (and Software) Availability
 
 <!--
 From https://f1000research.com/for-authors/article-guidelines/study-protocols
