about the study

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,27 @@
 ## Abstract
 
+> This manuscript is **work in progress** and (for now) follows the style of a [Study Protocol](https://f1000research.com/for-authors/article-guidelines/study-protocols) for [F1000Research Registered Reports](https://f1000research.com/for-authors/article-guidelines/registered-reports)
+
+
+For this study we aim to build **RO-Index**, a broad and comprehensive corpus of Research Objects found "in the wild". The proposed methodology follows multiple strands to find the "breeding grounds" of research objects and further describes how Research Objects are selected for inclusion, along with post-processing to build the corpus. 
+
+The corpus of Research Objects will primarily be distributed as Open Data, including:
+
+* Identifiers and access URLs
+* Extracted manifests and annotation files
+* Checksums/references for external data
+* Metadata from repository (e.g. Datacite XML)
+* Provenance of data gathering and post-processing
+
+Research Objects that cannot be redistributed (e.g. unknown license) will only be examined for aggregates.
+
+A brief set of qualitative and quantitative analytics will then be performed across the overall corpus, in particular to address research questions like:
+
+* Where are Research Objects published?
+* Which scientific domains produce Research Objects?
+* What serializations are used for making Research Objects?
+* What vocabularies are used to describe Research Objects and their content?
+* What type of resources to Research Objects contain?
+* What kinds of life cycles do Research Objects follow?
+
 
