--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -197,5 +197,14 @@ https://zenodo.org/communities/ro/?page=1&size=20
 
 https://developers.zenodo.org/#metadata-formats
 
+#### Prototype workflow
+
+A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl) is being developed using [Common Workflow Language](https://www.commonwl.org/), figure @fig:square-image shows how the content of a ZIP file can be listed in a streaming mode.
+
+
+![
+**CWL workflow: List ZIP content by URL**
+Visualization by CWL Viewer <https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl>
+](https://view.commonwl.org/graph/svg/github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl "Workflow url to fetch to curl to headers & filenames"){#fig:square-image}
 
 
