--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -199,7 +199,7 @@ https://developers.zenodo.org/#metadata-formats
 
 #### Prototype workflow
 
-A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl) is being developed using [Common Workflow Language](https://www.commonwl.org/), figure @fig:square-image shows how the content of a ZIP file can be listed in a streaming mode.
+A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl) is being developed using [Common Workflow Language](https://www.commonwl.org/) [@doi:10.6084/m9.figshare.3115156.v2], figure @fig:square-image shows how the content of a ZIP file can be listed in a streaming mode.
 
 
 ![
