use permalink for svg img

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -204,7 +204,7 @@ A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/
 
 ![
 **CWL workflow: List ZIP content by URL**
-Visualization by CWL Viewer <https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl>
-](https://view.commonwl.org/graph/svg/github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl "Workflow url to fetch to curl to headers & filenames"){#fig:square-image}
+Visualization by CWL Viewer <https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl>
+](https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl?format=svg "Workflow url to fetch to curl to headers & filenames"){#fig:square-image}
 
 
