--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -160,6 +160,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 
 * <https://sci-f.github.io/> [@doi:10.1093/gigascience/giy023]
 * <https://frictionlessdata.io/specs/data-package/>
+* The Journal of Research Objects <http://jro.world/> (see also [presentation](https://docs.google.com/presentation/d/1c4eSbTbaJ2ydEujvL1AA1rWghVFesy__nEtRIZeI-kA/edit?usp=sharing)
 
 #### 2nd generation ROs
 
