--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -161,6 +161,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 * <https://sci-f.github.io/> [@doi:10.1093/gigascience/giy023]
 * <https://frictionlessdata.io/specs/data-package/>
 * The Journal of Research Objects <http://jro.world/> (see also [presentation](https://docs.google.com/presentation/d/1c4eSbTbaJ2ydEujvL1AA1rWghVFesy__nEtRIZeI-kA/edit?usp=sharing)
+* Tonkaz <https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93>
 
 #### 2nd generation ROs
 
