--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -162,6 +162,8 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 * <https://frictionlessdata.io/specs/data-package/>
 * The Journal of Research Objects <http://jro.world/> (see also [presentation](https://docs.google.com/presentation/d/1c4eSbTbaJ2ydEujvL1AA1rWghVFesy__nEtRIZeI-kA/edit?usp=sharing)
 * Tonkaz <https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93>
+* [ActivePaper](https://www.activepapers.org) / HDF5  [@doi:10.12688/f1000research.5773.3]
+  > HDF5 dataset attributes are used to store metadata, including a dataflow graph that records provenance (requirement 5), but also creation time stamps and a data type indicator distinguishing references and executable code from “plain” datasets.
 
 #### 2nd generation ROs
 
