--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -138,6 +138,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 * [COMBINE archives](https://combinearchive.org/index/) [@doi:10.1186/s12859-014-0369-z; @doi:10.5281/zenodo.10439]
 * VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ [@doi:10.1186/s12859-014-0369-z; @doi:10.3233/SW-2012-0088]
 * DataONE Data packages [@doi:10.1109/eScience.2018.00019]
+* DataLad <https://www.datalad.org/datasets.html> [@doi:10.1145/2896825.2896830]
 
 #### ORE-based research objects
 
