--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -204,12 +204,40 @@ https://developers.zenodo.org/#metadata-formats
 
 #### Prototype workflow
 
-A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl) is being developed using [Common Workflow Language](https://www.commonwl.org/) [@doi:10.6084/m9.figshare.3115156.v2], figure @fig:square-image shows how the content of a ZIP file can be listed in a streaming mode.
-
+A [prototype workflow](https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zenodo-zip-content.cwl) is being developed using [Common Workflow Language](https://www.commonwl.org/) [@doi:10.6084/m9.figshare.3115156.v2], figure @fig:square-image shows how a a community sub-section of the [Zenodo](https://zenodo.org/) repository is being inspected to list the filenames contained within its downloadable ZIP files.
 
 ![
-**CWL workflow: List ZIP content by URL**
-Visualization by CWL Viewer <https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl>
-](https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl?format=svg "Workflow url to fetch to curl to headers & filenames"){#fig:square-image}
+**CWL workflow: List ZIP content for Zenodo community**
+Visualization by CWL Viewer <https://w3id.org/cwl/view/git/4360a062e7cff5aadacbf401e8e743a660657680/code/data-gathering/workflows/zenodo-zip-content.cwl>
+](https://w3id.org/cwl/view/git/4360a062ehe7cff5aadacbf401e8e743a660657680/code/data-gathering/workflows/zenodo-zip-content.cwl?format=svg "Inspect downloadable zip files in Zenodo"){#fig:square-image}
 
+In brief the prototype workflow consists of these steps:
+
+1. For a given Zenodo community, e.g. <https://zenodo.org/communities/ro>, retrieve its OAI-PMH entries using DataCite v4 XML e.g. <https://zenodo.org/oai2d?verb=ListRecords&set=user-ro&metadataPrefix=datacite4>
+2. Extract the URI for the Zenodo record, e.g. <oai:zenodo.org:1484341>
+3. Search-replace to build the URI of the the corresponding Zenodo landing page, e.g. <https://zenodo.org/record/2838898>
+4. Retrieve the HTML of the landing page
+5. Extract the [link relations](https://tools.ietf.org/html/rfc8288) of type [alternate](https://html.spec.whatwg.org/multipage/links.html#rel-alternate) to find the download links (XPath `//link[@rel="alternate"]/@href`)
+6. Filter for download links that end with `*.zip`
+7. Retrieve ZIP file
+8. List filenames within ZIP file
+9. Detect filenames like "manifest.rdf" within list and return original Zenodo URI or `null` _(in development)_
+
+The workflow and its components have been tested with the reference implementation `cwltool` [@doi:10.5281/zenodo.3369238] which can provide rich provenance captured in CWLProv research objects [@doi:10.5281/zenodo.3196309] <!-- in press 10.1093/gigascience/giz095-->
+
+In developing this prototype several challenges where immediately detected:
+
+* The [OAI-PMH records](https://zenodo.org/oai2d?verb=ListRecords&set=user-ro&metadataPrefix=datacite4) contain substansive DataCite information, but do not include the links to the Zenodo record or the ZIP downloads. The identifiers for records is in a form that is specific to OAI-PMH, e.g. `oai:zenodo.org:1310621` and had to be rewritten to a URI using the same record number.
+  * The [Zenodo API](https://developers.zenodo.org/) does include these additional URIs - but is not available for anonymous use as it requires a registration token. Distributing this token as part of the workflow provenance would give access to the author's Zenodo account.
+* The HTML landing page provides links to structured metadata, e.g. as JSON-LD using Schema.org <https://zenodo.org/record/1310621/export/schemaorg_jsonld> but the structured data is included in a `<pre>` block within HTML (for copy-pasting) and not programmatically accessible. HTTP content-negotiation does not give direct access to the structured data.  There are no `alternate` links from the HTML landing page to these "export" pages, so their URIs would have to be manually constructed. 
+  * The JSON-LD does include links to downloads of ZIP files etc, but only if the Record is of type _Dataset_ in Zenodo, which [in JSON-LD](https://zenodo.org/record/2838898/export/schemaorg_jsonld#.XXdwzffTU5k) is represented as a [DataDownload](http://schema.org/DataDownload) with a [contentUrl](http://schema.org/contentUrl)
+* To list filename contained in a ZIP file, the whole file must be downloaded because in the [ZIP format](https://pkware.cachefly.net/webdocs/casestudies/APPNOTE.TXT) the table of content is written at the end of the file
+  * The host providing Zenodo downloads do not support the [HTTP Range](https://tools.ietf.org/html/rfc7233) request header, so it is not possible to download say only the last 128 kB of the ZIP file.
+  * Some of the dataset downloads are larger than 1 GB
+  * `cwltool` saves all intermediate values until the end of the workflow
+* To preserve disk space use during download of ZIP file only, an initial idea was explored of using the CWL [streamable](https://www.commonwl.org/v1.1/CommandLineTool.html#CommandOutputRecordField) feature so that the output of `curl` could be passed to the utillity [sunzip](https://github.com/madler/sunzip) which can extract/inspect ZIP files in a streaming fashion
+  * It was found that while the sunzip tool supports streamable extraction and testing based on the intermediate file entry records of the ZIP file, it does not decide or list the filenames before the end of the download. Thus the output of `sunzip -t` (test extract) itself is not streamable
+  * An experimental new feature `sunzip -l` was [attempted](https://github.com/madler/sunzip/pull/3), where file names of records are printed as they are encountered. This is at the risk of printing files that have subsequently been deleted from the ZIP file and do not appear in the table of content. This was considered a small risk as the primary purpose was to detect ZIP files containing "manifest-like" files and it was assumed that most deposited ZIP files had been created in a one-off operation and would not have inconsistent file records.
+  * The experimental feature however detected that several files found in Zenodo are written with a "deferred length" - the intermitting ZIP records do not record their length and so `sunzip` is unable to find the offset to the next record without actually decompressing the stream.
+  * It was found that `cwltool --parallel`  did not seem to start the subsequent step and thus did not facilitate the `streamable` feature. The ZIP files were still saved to disk, and all the ZIP file downloads where completed before any of the ZIP extraction was started.  Future work will explore using the implementation `toil` which have been argued to have better support for concurrency.
 
