--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -175,7 +175,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 
 A key characteristic of a Research Object is the presence of a _manifest_ that describes and relates the content. However, multiple potential formats and conventions have emerged for how to serialize such a format. (..)
 
-### Proposed workflow
+### Proposed data gathering workflow
 
 The overall data gathering workflow is envisioned as:
 
@@ -240,4 +240,13 @@ In developing this prototype several challenges where immediately detected:
   * An experimental new feature `sunzip -l` was [attempted](https://github.com/madler/sunzip/pull/3), where file names of records are printed as they are encountered. This is at the risk of printing files that have subsequently been deleted from the ZIP file and do not appear in the table of content. This was considered a small risk as the primary purpose was to detect ZIP files containing "manifest-like" files and it was assumed that most deposited ZIP files had been created in a one-off operation and would not have inconsistent file records.
   * The experimental feature however detected that several files found in Zenodo are written with a "deferred length" - the intermitting ZIP records do not record their length and so `sunzip` is unable to find the offset to the next record without actually decompressing the stream.
   * It was found that `cwltool --parallel`  did not seem to start the subsequent step and thus did not facilitate the `streamable` feature. The ZIP files were still saved to disk, and all the ZIP file downloads where completed before any of the ZIP extraction was started.  Future work will explore using the implementation `toil` which have been argued to have better support for concurrency.
+
+<!--
+TODO: 
+
+Create PROV entities for each record, download, manifest, datacite etc.
+
+Can we get data/stats for all of Zenodo? Start download to fill .cache
+
+-->
 
