no need to show xpath

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -217,7 +217,7 @@ In brief the prototype workflow consists of these steps:
 2. Extract the URI for the Zenodo record, e.g. <oai:zenodo.org:1484341>
 3. Search-replace to build the URI of the the corresponding Zenodo landing page, e.g. <https://zenodo.org/record/2838898>
 4. Retrieve the HTML of the landing page
-5. Extract the [link relations](https://tools.ietf.org/html/rfc8288) of type [alternate](https://html.spec.whatwg.org/multipage/links.html#rel-alternate) to find the download links (XPath `//link[@rel="alternate"]/@href`)
+5. Extract the [link relations](https://tools.ietf.org/html/rfc8288) of type [alternate](https://html.spec.whatwg.org/multipage/links.html#rel-alternate) to find the download links
 6. Filter for download links that end with `*.zip`
 7. Retrieve ZIP file
 8. List filenames within ZIP file
