--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -139,6 +139,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 * VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ [@doi:10.1186/s12859-014-0369-z; @doi:10.3233/SW-2012-0088]
 * DataONE Data packages [@doi:10.1109/eScience.2018.00019]
 * DataLad <https://www.datalad.org/datasets.html> [@doi:10.1145/2896825.2896830]
+* [BloodHound](http://bloodhound-tracker.net/) / [Global Biodiversity Information Facility](https://gbif.org) GBIF Darwin Core Archives [@doi:10.1371/journal.pone.0102623] e.g. [@doi:10.5281/zenodo.3405730] <https://www.gbif.org/dataset/search>
 
 #### ORE-based research objects
 
