--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -222,7 +222,7 @@ In brief the prototype workflow consists of these steps:
 6. Filter for download links that end with `*.zip`
 7. Retrieve ZIP file
 8. List filenames within ZIP file
-9. Detect filenames like `manifest.rdf` or `meta.xml` within list and return original Zenodo URI or `null` _(in development)_
+9. Detect filenames like `manifest.rdf` `eml.xml`  or `meta.xml` within list and return original Zenodo URI or `null` _(in development)_
 
 The workflow and its components have been tested with the reference implementation `cwltool` [@doi:10.5281/zenodo.3369238] which can provide rich provenance captured in CWLProv research objects [@doi:10.5281/zenodo.3196309] <!-- in press 10.1093/gigascience/giz095-->
 
