--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -140,6 +140,7 @@ For GDPR purposes the _Data Controller_ is The University of Manchester, data su
 * DataONE Data packages [@doi:10.1109/eScience.2018.00019]
 * DataLad <https://www.datalad.org/datasets.html> [@doi:10.1145/2896825.2896830]
 * [BloodHound](http://bloodhound-tracker.net/) / [Global Biodiversity Information Facility](https://gbif.org) GBIF Darwin Core Archives [@doi:10.1371/journal.pone.0102623] e.g. [@doi:10.5281/zenodo.3405730] <https://www.gbif.org/dataset/search>
+* Crystallographic Binary File [@doi:10.1107/97809553602060000729]
 
 #### ORE-based research objects
 
