--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -260,9 +260,13 @@ Some of the commands..
 curl --retry 10 -H "Accept: application/vnd.zenodo.v1+json" 'https://zenodo.org/api/records/[1-3450000]' -o "record_#1.json"
 
 # TODO: Consistency check of records
-grep -r ^.."status.*404" . | cut -d ":" -f 1 | xargs mv -t 404/
+find . -maxdepth 1 -type f -name 'record*json' | xargs grep ^.."status.*404" | cut -d ":" -f 1 | xargs mv -t 404/
 
-# TODO 
+
+### TODO: Redo as Jupyter notebook
+
+### Let's check the size of the *.zip files
+
 find . -maxdepth 1 -type f -name 'record*json' | xargs -n3 cat | jq '.files[]? | select(.type == "zip") | reduce .size as $s (0; . + $s)  ' > zipsizes.txt
 
 
@@ -349,6 +353,31 @@ stain@ondex2:/tmp/zenodo$ jq -n '25052 * 0.823 / 1008098*3450000 / 3600 / 24'
 # Should take less than a day? (That would means API download is slower.. )
 
 So in total 3 days for all zip downloads. No need for special measures.
+
+# All the small ZIP files fit on single disk 
+stain@ondex2:/tmp/zenodo$ cat zipsizes.txt | jq -s '.[] | select(. <= 30*1024*1024)' | jq -s 'reduce .[] as $s (0; . + $s)  / 0.30/ 1024/1024/1024'
+322.71499813844764
+
+# .. but just about!
+stain@ondex2:/tmp/zenodo$ df -h .
+Filesystem                  Size  Used Avail Use% Mounted on
+/dev/mapper/VolGroup00-tmp  296G   46G  235G  17% /tmp
+
+## TODO: Decide on threshold for data that should be kept on disk
+
+## TODO: Can we use Isolon for local storage..? No bandwidth benefit
+# but perhaps latency improvement. Might have just 300 GB quota left
+
+# //nasr.man.ac.uk/epsrss$/snapped/replicated/goble/methodbox
+#                      600T  555T   46T  93% /rds/methodbox
+
+
+# Use methodbox.cs.man.ac.uk ...? More diskspace (0.8 TB * 2)
+# the 1TB of Isilon storage has now been setup and is available for use. 
+
+## artifactory Used: 790.6 GB
+## methodbox 189G
+## uh.. 1 TB alrady
 
 -->
 
