--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -381,5 +381,11 @@ Filesystem                  Size  Used Avail Use% Mounted on
 ## methodbox 189G
 ## uh.. 1 TB alrady
 
+# Concatinate *.json into a single file for future use with jq
+# Note that this file is not JSON, but application/json-seq
+# https://tools.ietf.org/html/rfc7464
+# -- for use wih jq use jq --seq
+find . -maxdepth 1 -type f -name 'record*json' | xargs -n32 cat | jq -c .  | sed `echo -e "s/^/\x1e/g"` | xz > records.jsonseq.xz
+
 -->
 
