adding jq-filter

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -387,5 +387,26 @@ Filesystem                  Size  Used Avail Use% Mounted on
 # -- for use wih jq use jq --seq
 find . -maxdepth 1 -type f -name 'record*json' | xargs -n32 cat | jq -c .  | sed `echo -e "s/^/\x1e/g"` | xz > records.jsonseq.xz
 
+# Find filenames of uploads
+xzcat < records.jsonseq.xz | jq --seq --raw-output '.files[]?.key'  > deposit_filenames.txt
+
+
+# Build a jsonseq with only json records containing "conceptrecid" (avoiding "moved" and "not found" etc)
+# (avoids the previous naive 404 filtering)
+
+find . -maxdepth 1 -type f -name 'record*json' | xargs -n32 cat | jq -c .  | grep conceptrecid| sed `echo -e "s/^/\x1e/g"` | xz -4 -T5 > records-with-conceptrecid.jsonseq.xz
+
+# Look for *.zip file that are open to download
+
+xzcat records-wtih-conceptrecid.jsonseq.xz |  jq '. | select(.metadata.access_right == "open") | .files[]? | select(.type == "zip") | reduce .size as $s (0; . + $s)' | jq --slurp add
+
+27620751244752
+
+(aka 27 TiB)
+
+
+
+
+
 -->
 
